--- a/.gitignore
+++ b/.gitignore
@@ -9,29 +9,52 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # testing
 /coverage
+*.test.js
+*.spec.js
+__tests__/
+*.test.ts
+*.spec.ts
 
 # next.js
 /.next/
 /out/
+.next/
+out/
 
 # production
 /build
+dist/
+*.local
 
 # misc
 .DS_Store
 *.pem
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -39,4 +62,36 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-next-env.d.ts
+
+# turbo
+.turbo
+
+# sistema operativo
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# editores
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# archivos temporales
+*.tmp
+*.temp
+*.cache
+.cache/
+
+# logs
+logs/
+*.log
+
+# documentos temporales o borradores (opcional)
+# docs/**/*.tmp.pdf
+# docs/**/*.draft.*
