docs: documentar autenticación con Authgear y GitHub OAuth
- Crear docs/AUTHENTICATION.md con guía completa de configuración
- Actualizar README.md con información de auth y despliegue
- Actualizar .env.example con documentación detallada
- Añadir sección de login al manual de usuario
- Actualizar copilot-instructions.md con estructura del proyecto y guías de auth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,28 @@
-# Base path para GitHub Pages (dejar vacío para desarrollo local)
+# ============================================
+# Configuración de Folio
+# ============================================
+
+# Base path para GitHub Pages
+# - Dejar vacío para desarrollo local o dominio personalizado
+# - Configurar con el nombre del repo si se usa usuario.github.io/repo/
+# Ejemplo: NEXT_PUBLIC_BASE_PATH=/mi-repo
 NEXT_PUBLIC_BASE_PATH=
 
-# Saltar autenticación en desarrollo (true/false)
+# Saltar autenticación en desarrollo
+# - true: Crea un usuario dev automáticamente sin contactar Authgear
+# - false: Requiere login real con GitHub (producción)
 NEXT_PUBLIC_SKIP_AUTH=false
+
+# ============================================
+# Notas sobre autenticación
+# ============================================
+# Las credenciales de Authgear (Client ID y Endpoint) están en:
+#   src/lib/authgear.ts
+#
+# Para configurar tu propio proyecto de Authgear:
+#   1. Crea un proyecto en https://portal.authgear.com/
+#   2. Configura GitHub como proveedor social
+#   3. Actualiza AUTHGEAR_CLIENT_ID y AUTHGEAR_ENDPOINT en authgear.ts
+#   4. Configura las URIs de redirect en el dashboard de Authgear
+#
+# Documentación completa: docs/AUTHENTICATION.md
