--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/copy-datasets.cjs",
     "build": "next build",
     "start": "next start",
     "lint": "eslint ."
