Remove data/ and copy script; use public/ as master

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -73,8 +73,41 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Copy datasets to public/api
+        run: node scripts/copy-datasets.cjs
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Copy datasets to public/api (post-build)
+        run: node scripts/copy-datasets.cjs
+      - name: Ensure out directory exists
+        run: |
+          mkdir -p out/api
+      - name: Copy public/api to out/api
+        run: |
+          cp -a public/api/* out/api/ || true
+      - name: Verify dataset counts match
+        run: |
+          python - <<'PY'
+import json, sys
+from pathlib import Path
+data_count = None
+try:
+    with open('data/db-constitucion.json', encoding='utf-8') as f:
+        data_count = len(json.load(f).get('questions', []))
+except Exception as e:
+    print('Could not read data/db-constitucion.json:', e)
+    sys.exit(1)
+try:
+    with open('out/api/db-constitucion.json', encoding='utf-8') as f:
+        out_count = len(json.load(f).get('questions', []))
+except Exception as e:
+    print('Could not read out/api/db-constitucion.json:', e)
+    sys.exit(1)
+print(f'data count={data_count}, out count={out_count}')
+if data_count != out_count:
+    print('ERROR: question counts differ between data/ and out/api. Failing build.')
+    sys.exit(2)
+PY
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
