--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node scripts/copy-datasets.cjs && next dev",
     "prebuild": "node scripts/copy-datasets.cjs",
     "build": "next build",
     "start": "next start",
